--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   <div class="nav">
     <div class="container">
     <ul class="pull-right">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">About</a></li> 
-      <li><a href="#">Contact</a></li> 
-      <li><a href="#">Prices</a></li> 
-      <li><a href="#">Gallery</a></li> 
+      <li style="float:right"><a href="index.html">Home</a></li>
+      <li style="float:right"><a href="#">About</a></li> 
+      <li style="float:right"><a href="#">Contact</a></li> 
+      <li style="float:right"><a href="#">Prices</a></li> 
+      <li style="float:right"><a href="#">Gallery</a></li> 
     </ul>
   </div>
 </nav>
