--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,20 @@
 </head>
 <header><img width="150" src="http://i.imgur.com/oxe5AAK.gif" alt="My logo" title="Mikeala Francis Logo">
 <h2>A girl who simply enjoys the creative things in life</h2>
-<h1>Contact</h1><nav>
- <a href="index.html">Home</a>|<a href="about.html">About</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Prices</a>|<a href="gallery.html">Gallery</a>
- </nav>
- <strong>
-   
-  </strong>
+<h1>Contact</h1>
+ <div class="nav">
+    <div class="container">
+    <ul class="pull-right">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li> 
+      <li><a href="contact.html">Contact</a></li> 
+      <li><a href="prices.html">Prices</a></li> 
+      <li><a href="gallery.html">Gallery</a></li> 
+    </ul>
+  </div>
+</nav>
+...
+
  </header>
 <div class="container">
 <p> For more information, email me at mikeala_francis@yahoo.com</p>
