--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li> 
       <li><a href="contact.html">Contact</a></li> 
-      <li><a href="prices.html">Prices</a></li> 
+      <li><a href="pricing.html">Prices</a></li> 
       <li><a href="gallery.html">Gallery</a></li> 
     </ul>
   </div>
