--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,24 @@
 </nav>
 
 </header>
+ <div class="row">
+  <div class="col-md-4">
+    <a href="http://i.imgur.com/8xorC2w.gif" class="thumbnail">
+      <img src="http://i.imgur.com/8xorC2w.gif" alt="Blue Flowers" style="width:150px;height:150px">
+    </a>
+  </div>
+  <div class="col-md-4">
+    <a href="http://i.imgur.com/GaIFM8c.gif" class="thumbnail">
+      <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna and Lady Gaga" style="width:150px;height:150px">
+    </a>
+  </div>
+  <div class="col-md-4">
+    <a href="http://i.imgur.com/WG2WMTZ.gif" class="thumbnail">
+      <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p> 
+      <img src="http://i.imgur.com/WG2WMTZ.gif" alt="High Heels" style="width:150px;height:150px">
+    </a>
+  </div>
+</div
   <div id="lightgallery">
   <a href="http://i.imgur.com/8xorC2w.gif">
    <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers">
