--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,8 @@
 </nav>
 
 </header>
- <div class="row">
+<div class="container">
+  <div class="row">
   <div class="col-md-4">
     <a href="http://i.imgur.com/8xorC2w.gif" class="thumbnail">
       <img src="http://i.imgur.com/8xorC2w.gif" alt="Blue Flowers" style="width:300px;height:300px">
@@ -48,7 +49,13 @@
       <img src="http://i.imgur.com/WG2WMTZ.gif" alt="High Heels" style="width:300px;height:300px">
     </a>
   </div>
-</div
+</div>
+<div class="col-md-4">
+    <a href="http://i.imgur.com/2WjpJWY.gif" class="thumbnail">
+      <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" style="width:300px;height:300px">
+    </a>
+  </div>
+</div>
   <div id="lightgallery">
   <a href="http://i.imgur.com/8xorC2w.gif">
    <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers">
