--- a/gallery.html
+++ b/gallery.html
@@ -37,17 +37,14 @@
    <ul id="lightgallery" class="list-unstyled row">
     <li><a href="http://i.imgur.com/8xorC2w.gif">
   <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers"> </a></li>
+  <li> <a href="http://i.imgur.com/GaIFM8c.gif">
+   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show"></a></li>
+   <li> <a href="http://i.imgur.com/2WjpJWY.gif">
+   <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" title="Champagne Bottle"></a></li>
+   <li>  <a href="http://i.imgur.com/WG2WMTZ.gif">
+   <img src="http://i.imgur.com/WG2WMTZ.gif" alt="Marilyn" title="High Heels"> </a></li>
    </ul>
-  
-  <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show">
-  </a>
-  <a href="http://i.imgur.com/2WjpJWY.gif">
-   <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" title="Champagne Bottle">
-  </a>
-  <a href="http://i.imgur.com/WG2WMTZ.gif">
-   <img src="http://i.imgur.com/WG2WMTZ.gif" alt="Marilyn" title="High Heels">
-  </a>
+
   ...
 </div>
 <footer> <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
