--- a/gallery.html
+++ b/gallery.html
@@ -34,15 +34,18 @@
 </header>
 
   <div id="lightgallery">
-   <ul id="lightgallery" class="list-unstyled row">
-    <li><a href="http://i.imgur.com/8xorC2w.gif">
-  <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers"> </a></li>
-  <li> <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show"></a></li>
-   <li> <a href="http://i.imgur.com/2WjpJWY.gif">
-   <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" title="Champagne Bottle"></a></li>
-   <li>  <a href="http://i.imgur.com/WG2WMTZ.gif">
-   <img src="http://i.imgur.com/WG2WMTZ.gif" alt="Marilyn" title="High Heels"> </a></li>
+   <a href="http://i.imgur.com/8xorC2w.gif">
+  <img src="http://i.imgur.com/8xorC2w.gif" alt="blue" title="Flowers"> 
+ </a>
+  <a href="http://i.imgur.com/GaIFM8c.gif">
+   <img src="http://i.imgur.com/GaIFM8c.gif" alt="Madonna & Lady Gaga" title="The Royal Show">
+  </a>
+    <a href="http://i.imgur.com/2WjpJWY.gif">
+   <img src="http://i.imgur.com/2WjpJWY.gif" alt="Champagne" title="Champagne Bottle">
+  </a>
+  <a href="http://i.imgur.com/WG2WMTZ.gif">
+   <img src="http://i.imgur.com/WG2WMTZ.gif" alt="Marilyn" title="High Heels"> 
+  </a>
    </ul>
 
   ...
