--- a/pricing.html
+++ b/pricing.html
@@ -40,7 +40,7 @@
     
     tr:nth-child(2) {
       font-size: 32px;
-      background-color: #d3d3d3;
+      background-color: #ffe4b5;
       color: #fff;
       font-family: 'Montserrat', sans-serif;
     }
@@ -52,7 +52,7 @@
       font-size: 24px;
     }
     tr:nth-child(4) {
-      background-color: #d3d3d3;
+      background-color: #ffe4b5;
       font-family: 'Montserrat', sans-serif;
       height: 14px;
       font-size: 40px;
@@ -66,7 +66,7 @@
     }
     
     tr: nth-child(6) {
-      background-color: #d3d3d3;
+      background-color: #ffe4b5;
       text-align: center;
       font-family: 'Montserrat', sans-serif;
       height: 20px;
@@ -84,27 +84,7 @@
       font-size: 20px;
       text-align: center;
     }
-  .btn {
-  -webkit-border-radius: 12;
-  -moz-border-radius: 12;
-  border-radius: 12px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 17px;
-  background: #cfba9b;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-.btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
+ 
   </style>
    </head>
    <header><img src="http://i.imgur.com/oxe5AAK.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
