--- a/pricing.html
+++ b/pricing.html
@@ -34,7 +34,7 @@
     tr:nth-child(1) {
     font-size: 48px;
     text-align: center;
-    background-color: #CFBA9B;
+    background-color: #faebd7;
     font-family: 'Montserrat', sans-serif;
     }
     
@@ -45,7 +45,7 @@
       font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(3) {
-      background-color: #cfba9b;
+      background-color: #ffe4b5;
       color: #fff;
       font-style: bold;
       font-family: 'Montserrat', sans-serif;
@@ -60,7 +60,7 @@
     tr:nth-child(5) {
       text-align: center;
       font-family: 'Montserrat', sans-serif;
-      background-color: #CFBA9B;
+      background-color:#ffe4b5 ;
       font-size: 48px;
       height: 12px;
     }
