--- a/pricing.html
+++ b/pricing.html
@@ -22,7 +22,7 @@
       border: 2px ridge #987456;
     }
     th { 
-      background-color: #ffe4b5;
+      background-color: #faebd7;
       text-transform: uppercase;
     }
     
