--- a/pricing.html
+++ b/pricing.html
@@ -55,6 +55,7 @@
     }
     tr:nth-child(4) {
       background-color: #ffe4b5;
+      color: #000000;
       font-family: 'Montserrat', sans-serif;
       height: 14px;
       font-size: 40px;
@@ -63,12 +64,14 @@
       text-align: center;
       font-family: 'Montserrat', sans-serif;
       background-color:#faebd7 ;
+      color: #000000;
       font-size: 48px;
       height: 12px;
     }
     
     tr: nth-child(6) {
       background-color: #ffe4b5;
+      color: #000000;
       text-align: center;
       font-family: 'Montserrat', sans-serif;
       height: 20px;
