--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
  </header>
 <div class="container">
-<p> For more information, email me at mikeala_francis@yahoo.com</p>
+<p> For more information, email me at mikealafrancis@gmail.com</p>
 </div>
 <footer><a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a></footer>
 </body>
