--- a/pricing.html
+++ b/pricing.html
@@ -36,7 +36,8 @@
     font-size: 48px;
     text-align: center;
     background-color: #faebd7;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: medium;
     color: #000000;
     }
     
@@ -44,25 +45,29 @@
       font-size: 32px;
       background-color: #ffe4b5;
       color: #000000;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
+      font-weight: medium;
     }
     tr:nth-child(3) {
       background-color: #faebd7;
       color: #000000;
       font-style: bold;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 24px;
+      font-weight: medium;
     }
     tr:nth-child(4) {
       background-color: #ffe4b5;
       color: #000000;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
+      font-weight: medium;
       height: 14px;
       font-size: 40px;
     }
     tr:nth-child(5) {
       text-align: center;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
+      font-weight: medium;
       background-color:#faebd7 ;
       color: #000000;
       font-size: 48px;
@@ -73,7 +78,8 @@
       background-color: #ffe4b5;
       color: #000000;
       text-align: center;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto', sans-serif;
+      font-weight: medium;
       height: 20px;
       vertical-align: bottom;
     }
