--- a/pricing.html
+++ b/pricing.html
@@ -36,8 +36,7 @@
     font-size: 48px;
     text-align: center;
     background-color: #faebd7;
-    font-family: 'Roboto', sans-serif;
-    font-weight: medium;
+    font-family: 'Monsterrat', sans-serif;
     color: #000000;
     }
     
