--- a/pricing.html
+++ b/pricing.html
@@ -74,7 +74,7 @@
     }
     
     tr: nth-child(6) {
-      background-color: #fff;
+      background-color: #ffe4b5;
       color: #000000;
       text-align: center;
       font-family: 'Roboto', sans-serif;
