--- a/pricing.html
+++ b/pricing.html
@@ -42,7 +42,7 @@
     
     tr:nth-child(2) {
       font-size: 32px;
-      background-color: #ffe4b5;
+      background-color: #ffebcd;
       color: #000000;
       font-family: 'Roboto', sans-serif;
       font-weight: medium;
@@ -56,7 +56,7 @@
       font-weight: medium;
     }
     tr:nth-child(4) {
-      background-color: #ffe4b5;
+      background-color: #ffebcd;
       color: #000000;
       font-family: 'Roboto', sans-serif;
       font-weight: medium;
